# alsavol

./: CHANGELOG  Makefile  Makefile.in  README.md  alsavol.1  common.h  config.c  config.h  configure  configure.ac  help.c  help.h  main.c  manpage.md  popup-terminal.c  popup-terminal.h  sound-card.c  sound-card.h  tclwish-ui.c  tclwish-ui.h  terminal-ui.c  terminal-ui.h  ui.c  ui.h  wmctrl.c  wmctrl.h  zenity-ui.c  zenity-ui.h
libuseful-bundled/: Container.c  List.c  Makefile  config.status  configure  configure.ac  libUseful.so.5  libUseful.so.5.54
libuseful-bundled/autom4te.cache/: output.0  requests  traces.0
